Complete project with Cloud-First DevOps (GitHub Actions, SonarCloud, Docker)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 # Project-level settings
-sonar.projectKey=Chat-grid
-sonar.projectName=Chat-grid
+sonar.projectKey=Anand001122_AI-Nexus
+sonar.organization=anand001122
+sonar.projectName=AI-Nexus
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 
@@ -10,9 +11,10 @@ sonar.modules=backend,frontend
 # === Backend module ===
 backend.sonar.projectBaseDir=backend
 backend.sonar.sources=src
-backend.sonar.java.binaries=target
+backend.sonar.host.url=https://sonarcloud.io
 
 # === Frontend module ===
 frontend.sonar.projectBaseDir=frontend
 frontend.sonar.sources=src
 frontend.sonar.inclusions=**/*.js,**/*.ts,**/*.jsx,**/*.tsx,**/*.vue
+frontend.sonar.host.url=https://sonarcloud.io
