--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,8 @@ sonar.modules=backend,frontend
 
 # === Backend module ===
 backend.sonar.projectBaseDir=backend
-backend.sonar.sources=src
+backend.sonar.sources=src/main/java
+backend.sonar.java.binaries=target/classes
 backend.sonar.host.url=https://sonarcloud.io
 
 # === Frontend module ===
