--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,6 +10,6 @@ RUN mvn clean package -DskipTests
 # Production stage
 FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
