--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,8 +12,8 @@ openrouter:
     grok: x-ai/grok-2-1212
     gemini: google/gemini-2.0-pro-exp-02-05:free
   api-keys:
-    deepseek: ${DEEPSEEK_APIKEY}
-    gpt5: ${GPT5_APIKEY}
-    grok: ${GROK_APIKEY}
+    deepseek: ${Deepseek_APIKEY}
+    gpt5: ${OpenAI_APIKey}
+    grok: ${Grok_APIKEY}
     gemini: ${GEMINI_APIKEY}
 
