--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 services:
+  db:
+    image: postgres:15-alpine
+    container_name: ai-nexus-db
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: ${DB_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
+      POSTGRES_DB: ai_nexus
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    image: backend:latest
+    image: ai-nexus-backend:latest
+    depends_on:
+      - db
     env_file:
       - .env
     ports:
@@ -11,6 +26,9 @@ services:
     restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - DB_URL=jdbc:postgresql://db:5432/ai_nexus
+      - DB_USERNAME=${DB_USERNAME:-postgres}
+      - DB_PASSWORD=${DB_PASSWORD:-postgres}
       - PORT=${BACKEND_PORT:-8080}
 
   frontend:
@@ -18,12 +36,15 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://localhost:8087/api}
-    image: frontend:latest
+        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://localhost:8080/api}
+    image: ai-nexus-frontend:latest
     env_file:
       - .env
     ports:
-      - "${FRONTEND_PORT}:80"
+      - "${FRONTEND_PORT:-5173}:80"
     restart: unless-stopped
     environment:
       - NODE_ENV=production
+
+volumes:
+  postgres_data:
