--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,11 +4,12 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
+ARG VITE_API_BASE_URL
+RUN VITE_API_BASE_URL=${VITE_API_BASE_URL} npm run build
 
 # Production stage
 FROM nginx:stable-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-# Default nginx configuration can be overridden if needed
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
